fix adaptive on mobile

--- a/app/blocks/action/action.styl
+++ b/app/blocks/action/action.styl
@@ -26,7 +26,7 @@
 			margin-right 0
 
 			+above(768px)
-				margin 0 0 5px
+				margin 0 auto 5px
 				padding 0
 				display block
 				size 30px
