--- a/app/blocks/card/card.styl
+++ b/app/blocks/card/card.styl
@@ -119,6 +119,7 @@
 		+above(768px)
 			padding-right 15px
 			width 41%
+			order 1
 		
 	&__feature-list
 		margin 12px 0 19px
@@ -144,6 +145,7 @@
 		+above(768px)
 			padding-left 15px
 			width 59%
+			order 2
 		
 		img
 			max-width 100%
