--- a/app/blocks/special/special.styl
+++ b/app/blocks/special/special.styl
@@ -44,7 +44,7 @@
 		
 	&__show-all
 		position relative
-		padding 10px 0 10px 26px
+		padding 10px 0
 		display inline-block
 		line-height 1.4
 		text-decoration none
