--- a/app/blocks/tags/tags.styl
+++ b/app/blocks/tags/tags.styl
@@ -3,3 +3,6 @@
 	padding 20px
 	display block
 	background-color #fff
+	
+	&__list
+		column-count 1
